test_regress/t/t_force_tri.out
%Error-UNSUPPORTED: t/t_force_tri.v:29:10: Unsupported tristate construct: ASSIGNFORCE
                                         : ... note: In instance 't'
   29 |          force bus = 4'bzz10;
      |          ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
